Refactor speaker and map sections by removing unnecessary background color classes for improved styling consistency.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </section>
 
-        <section class="speakers  mt-20 mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 bg-lime-300 p-10 "> 
+        <section class="speakers  mt-20 mx-auto grid grid-cols-1 md:grid-cols-3 gap-6  p-10 "> 
             <div class="speaker-card border border-lime-600 rounded-lg flex flex-col items-center justify-center h-[400px] p-4"> 
                 <h3 class="text-xl font-bold mb-2">Спикер 1</h3>
                 <p class="text-center">Краткое описание спикера...</p> 
@@ -86,7 +86,7 @@
             </div>
         </section>
 
-        <section class="map-container mt-10 bg-lime-300 p-10 mb-20">
+        <section class="map-container mt-10  p-10 mb-20">
             <div class="container mx-auto px-6">
                 <h2 class="text-4xl font-bold text-gray-800 mb-8 text-center">Место проведения</h2>
                 <div class="map-wrapper rounded-lg shadow-xl overflow-hidden">
