--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Экофорум Ковдор</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="animation/animations.css">
 </head>
 <body class="bg-lime-200">
     <header class="bg-white shadow-md">
@@ -13,9 +14,9 @@
             <div class="flex items-center justify-between">
                 <div class="text-xl font-bold text-gray-800">Логотип</div>
                 <div class="space-x-4">
-                    <a href="#" class="text-gray-600 hover:text-gray-800">Главная</a>
-                    <a href="#" class="text-gray-600 hover:text-gray-800">О нас</a>
-                    <a href="#" class="text-gray-600 hover:text-gray-800">Контакты</a>
+                    <a href="#main" class="text-gray-600 hover:text-gray-800">Главная</a>
+                    <a href="#map" class="text-gray-600 hover:text-gray-800">Где мы</a>
+                    <a href="#registration" class="text-gray-600 hover:text-gray-800">Регистрация</a>
                 </div>
             </div>
         </nav>
@@ -62,7 +63,7 @@
         </section>
         </div>
 
-        <div class="page-2 h-[100vh]">
+        <div id="main" class="page-2 h-[100vh]">
         <section>
 
         </section>
@@ -87,15 +88,15 @@
 
             <section class="container mt-[20px]  mx-auto px-6 py-8">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <div class="bg-white rounded-lg shadow-md p-6">
+                    <div class="ideas bg-white rounded-lg shadow-md p-6">
                         <h2 class="text-xl font-semibold text-gray-800 mb-3">Заголовок 1</h2>
                         <p class="text-gray-600">Описание первого блока контента.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-md p-6">
+                    <div class="ideas bg-white rounded-lg shadow-md p-6">
                         <h2 class="text-xl font-semibold text-gray-800 mb-3">Заголовок 2</h2>
                         <p class="text-gray-600">Описание второго блока контента.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-md p-6">
+                    <div class="ideas bg-white rounded-lg shadow-md p-6">
                         <h2 class="text-xl font-semibold text-gray-800 mb-3">Заголовок 3</h2>
                         <p class="text-gray-600">Описание третьего блока контента.</p>
                     </div>
@@ -103,7 +104,7 @@
             </section>
         </div>
 
-        <div class="page-4 h-[100vh]">
+        <div id="map" class="page-4 h-[100vh]">
             <section class="map-container mt-10  p-10 mb-20">
                 <div class="container mx-auto px-6">
                     <h2 class="text-4xl font-bold text-gray-800 mb-8 text-center">Место проведения</h2>
@@ -120,7 +121,7 @@
             </section>
         </div>
 
-        <div class="page-5 h-[100vh]">
+        <div id="registration" class="page-5 h-[100vh]">
             <section class="registration-form bg-lime-200 py-20">
                 <div class="container mx-auto px-6">
                     <h2 class="text-4xl font-bold text-gray-800 mb-8 text-center">Регистрируйся!</h2>
@@ -145,5 +146,6 @@
     </footer>
 
     <script src="scripts.js"></script>
+    <script src="animation/animations.js"></script>
 </body>
 </html>
