--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="page-1 w-full">
             <section class="carousel-container bg-black w-full h-[100vh] items-center relative flex">
                 <div class="main-page w-full sm:w-3/5 px-4 sm:ml-[150px] z-10">
-                    <h1 class="text-stone-50 text-3xl sm:text-5xl font-sans z-10">ЭКОФОРУМ «ГИПЕРБОРЕЯ-КОВДОР ПЕРЕЗАГРУЗКА»</h1>
+                    <h1 class="text-stone-50 text-3xl sm:text-5xl font-sans z-10">ЭКОФОРУМ <br> «ГИПЕРБОРЕЯ-КОВДОР ПЕРЕЗАГРУЗКА»</h1>
                     <p class="text-stone-50 text-l sm:text-xl font-sans z-10 mt-10">Экология</p>
                     <p class="text-stone-50 text-l sm:text-xl font-sans z-10 mt-5">Природа</p>
                     <p class="text-stone-50 text-l sm:text-xl font-sans z-10 mt-5">Наше будущее</p>
@@ -165,7 +165,7 @@
                     <div class="image-item relative rounded-lg overflow-hidden group md:col-span-2 lg:col-span-2 lg:row-span-2 transition duration-300 ease-in-out">
                       <div class="absolute inset-0 bg-black bg-opacity-0 transition-opacity duration-300  z-10"></div>
                        <img src="img/img_11.jpg" alt="Описание большого фото 2" class="w-full h-full object-cover">
-                      <span class="absolute bottom-0 left-0 p-2 text-white text-sm bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100 z-20">2024</span>
+                      <span class="absolute bottom-0 left-0 p-2 text-white text-sm bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100 z-20">2023</span>
                     </div>
 
                     <div class="image-item vertical-item relative rounded-lg overflow-hidden group lg:row-span-2 transition duration-300 ease-in-out">
