--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="animation/animations.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
-<body class="bg-lime-200">
+<body class="bg-white-200">
     <header class="bg-white shadow-md">
         <nav class="container mx-auto px-4 sm:px-6 py-4">
             <div class="flex flex-col sm:flex-row items-center justify-between">
@@ -116,10 +120,11 @@
 
             </section>
         </div>
-
+        </div>
+        <div class="page-7 min-h-[50vh] w-full">
             <section class="w-full mt-[20px] mx-auto px-4 sm:px-6 py-8">
-                <h2 class="text-l sm:text-2xl font-bold text-gray-800 mb-8 text-center">Полезные советы</h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">
+                <h1 class="text-l sm:text-2xl font-bold text-gray-800 mb-8 text-center">Полезные советы</h1>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 lg:row-2 gap-4 sm:gap-6">
                     <div class="ideas bg-white rounded-lg shadow-md p-4 sm:p-6">
                         <h2 class="text-l font-semibold text-gray-800 mb-3">Откажитесь от одноразовой посуды.</h2>
                         <p class="text-gray-600"> Используйте свою кружку и контейнер.</p>
@@ -237,7 +242,7 @@
         </div>
 
         <div id="registration" class="page-5 min-h-[75vh] w-full flex flex-col justify-evenly items-center py-10">
-            <section class="registration-form w-full bg-lime-200 py-10 sm:py-20">
+            <section class="registration-form w-full py-10 sm:py-20">
                 <div class="w-full px-4 sm:px-6">
                     <h2 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-8 text-center">Регистрируйся!</h2>
                     <div class="form-wrapper bg-white rounded-lg shadow-xl p-4 sm:p-8 max-w-4xl mx-auto">
