--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
-<body class="">
+<body class="bg-[#DDE5B6]">
     <header class="bg-[#F0EAD2] shadow-md">
         <nav class="container mx-auto px-4 sm:px-6 py-4">
             <div class="flex flex-col sm:flex-row items-center justify-between">
