--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>Экофорум Ковдор</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="animation/background.css">
     <link rel="stylesheet" href="animation/animations.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
+    <!-- Фоновые декоративные элементы -->
+    <div class="background-decor pointer-events-none select-none z-0">
+        <img src="img/sun.png" alt="Солнце" draggable="false">
+        <img src="img/облака.png" alt="Облака" draggable="false" ">
+        <img src="img/палатка.png" alt="Палатка" draggable="false">
+        <img src="img/fire-1.png" alt="Костер" draggable="false">
+        <img src="img/елки.png" alt="Елки" draggable="false">
+    </div>
 <body class="bg-[#DDE5B6]">
-    <header class="bg-[#F0EAD2] shadow-md">
+    <header class="bg-[#F0EAD2] shadow-md z-10">
         <nav class="container mx-auto px-4 sm:px-6 py-4">
             <div class="flex flex-col sm:flex-row items-center justify-between">
                 <div class="text-xl font-bold text-gray-800 mb-4 sm:mb-0">Логотип</div>
@@ -27,7 +36,7 @@
         </nav>
     </header>
 
-    <main class="w-full">
+    <main class="w-full z-10">
         <div id="title" class="page-1 w-full">
             <section class="carousel-container bg-black w-full h-[100vh] items-center relative flex">
                 <div class="main-page w-full sm:w-3/5 px-4 sm:ml-[150px] z-10">
@@ -66,13 +75,13 @@
         </div>
 
         <div id="main" class="page-2 min-h-[75vh] w-full flex flex-col justify-center items-center py-10 sm:py-20">
-            <section class="w-11/12 sm:w-4/5 lg:w-3/4 px-4 sm:px-6">
-                <h1 class="text-2xl sm:text-3xl lg:text-4xl xl:text-5xl font-sans z-10 text-center sm:text-left">Экофорум в Ковдоре: Наше Будущее Создается Здесь</h1>
-                <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-10 mt-6 sm:mt-8 lg:mt-10 text-gray-700">С 2022 года Ковдор становится центром притяжения тех, кому небезразлично будущее нашей планеты. Экофорум - это уникальная площадка, где встречаются эксперты, активисты и все, кто готов действовать ради сохранения природы и устойчивого развития.</p>
-                <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-10 mt-6 sm:mt-8 lg:mt-10 text-gray-700">
+            <section class=" w-11/12 sm:w-4/5 lg:w-3/4 px-4 sm:px-6 z-10 p-5 rounded-lg">
+                <h1 class="text-2xl sm:text-3xl lg:text-4xl xl:text-5xl font-sans z-20 text-center sm:text-left">Экофорум в Ковдоре: Наше Будущее Создается Здесь</h1>
+                <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-20 mt-6 sm:mt-8 lg:mt-10 text-gray-900">С 2022 года Ковдор становится центром притяжения тех, кому небезразлично будущее нашей планеты. Экофорум - это уникальная площадка, где встречаются эксперты, активисты и все, кто готов действовать ради сохранения природы и устойчивого развития.</p>
+                <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-20 mt-6 sm:mt-8 lg:mt-10 text-gray-900">
                     Присоединяйтесь к нам, чтобы узнать о передовых экологических решениях, обменяться опытом и стать частью сообщества, формирующего зеленое будущее нашего региона и всей страны.
                 </p>
-                <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-10 mt-6 sm:mt-8 lg:mt-10 text-gray-700">
+                <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-20 mt-6 sm:mt-8 lg:mt-10 text-gray-900">
                     Мы приглашаем вас окунуться в атмосферу знаний и вдохновения! Вас ждут интересные дискуссии, знакомство с инновационными проектами и возможность внести личный вклад в защиту окружающей среды.
                 </p>
             </section>
@@ -267,7 +276,7 @@
         </div>
     </main>
 
-    <footer class="bg-[#6C584C] text-white mt-12 z-20">
+    <footer class="bg-[#6C584C] text-white mt-12 z-10 p-10">
         <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-around">
             <div class="text-xl font-bold text-gray-800 mb-4 sm:mb-0">
                 Логотип
@@ -305,7 +314,6 @@
         </div>
         <p class="text-center p-5">&copy; Экофорум 2025.</p>
     </footer>
-
     </div>
     <script src="scripts.js"></script>
     <script src="animation/animations.js"></script>
