--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div id="main" class="page-2 min-h-[75vh] w-full flex flex-col justify-center items-center py-10 sm:py-20">
-            <section class=" w-11/12 sm:w-4/5 lg:w-3/4 px-4 sm:px-6 z-10 p-5 rounded-lg">
+            <section class=" w-11/12 sm:w-4/5 lg:w-3/4 px-4 sm:px-6 z-10 p-5 bg-[#DDE5B6]/60 rounded-lg">
                 <h1 class="text-2xl sm:text-3xl lg:text-4xl xl:text-5xl font-sans z-20 text-center sm:text-left">Экофорум в Ковдоре: Наше Будущее Создается Здесь</h1>
                 <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-20 mt-6 sm:mt-8 lg:mt-10 text-gray-900">С 2022 года Ковдор становится центром притяжения тех, кому небезразлично будущее нашей планеты. Экофорум - это уникальная площадка, где встречаются эксперты, активисты и все, кто готов действовать ради сохранения природы и устойчивого развития.</p>
                 <p class="text-base sm:text-lg lg:text-xl xl:text-2xl font-sans z-20 mt-6 sm:mt-8 lg:mt-10 text-gray-900">
@@ -93,7 +93,7 @@
             <div id="speakers" class="w-full flex flex-col justify-evenly items-center py-10 sm:py-20">
                 <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-gray-800 mb-8 text-center px-4">Спикеры</h1>
                 <section class="speakers w-11/12 sm:w-4/5 lg:w-3/4 mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8 lg:gap-10 p-4 sm:p-6 lg:p-8">
-                    <div class="speaker-card group relative bg-[#DDE5B6] border border-lime-600 rounded-lg flex flex-col items-center p-4 sm:p-6 overflow-hidden h-[450px] transition-shadow hover:shadow-lg">
+                    <div class="speaker-card group relative bg-[#DDE5B6]/90 border border-lime-600 rounded-lg flex flex-col items-center p-4 sm:p-6 overflow-hidden h-[450px] transition-shadow hover:shadow-lg">
                         <div class="w-36 h-36 sm:w-44 sm:h-44 lg:w-56 lg:h-56 rounded-full bg-gray-300 flex items-center justify-center overflow-hidden mb-4 border border-gray-400">
                             <img src="img/speak_1.jpg" alt="Фото спикера" class="object-cover w-full h-full">
                         </div>
@@ -108,7 +108,7 @@
                         </div>
                     </div>
 
-                    <div class="speaker-card group relative bg-[#DDE5B6] border border-lime-600 rounded-lg flex flex-col items-center p-4 sm:p-6 overflow-hidden h-[450px] transition-shadow hover:shadow-lg">
+                    <div class="speaker-card group relative bg-[#DDE5B6]/90 border border-lime-600 rounded-lg flex flex-col items-center p-4 sm:p-6 overflow-hidden h-[450px] transition-shadow hover:shadow-lg">
                         <div class="w-36 h-36 sm:w-44 sm:h-44 lg:w-56 lg:h-56 rounded-full bg-gray-300 flex items-center justify-center overflow-hidden mb-4 border border-gray-400">
                             <img src="img/speak_2.jpg" alt="Фото спикера" class="object-cover w-full h-full">
                         </div>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
 
-                    <div class="speaker-card group relative bg-[#DDE5B6] border border-lime-600 rounded-lg flex flex-col items-center p-4 sm:p-6 overflow-hidden h-[450px] transition-shadow hover:shadow-lg">
+                    <div class="speaker-card group relative bg-[#DDE5B6]/90 border border-lime-600 rounded-lg flex flex-col items-center p-4 sm:p-6 overflow-hidden h-[450px] transition-shadow hover:shadow-lg">
                         <div class="w-36 h-36 sm:w-44 sm:h-44 lg:w-56 lg:h-56 rounded-full bg-gray-300 flex items-center justify-center overflow-hidden mb-4 border border-gray-400">
                             <img src="img/speak_3.jpg" alt="Фото спикера" class="object-cover w-full h-full">
                         </div>
