Change a map size on phone

--- a/index.html
+++ b/index.html
@@ -245,16 +245,16 @@
               </section>
         </div>
 
-        <div id="map" class="page-4 min-h-[50vh] w-full flex flex-col justify-evenly items-center py-10">
-            <section class="map-container w-3/4 mt-10 p-4 sm:p-10">
+        <div id="map" class="page-4 min-h-[50vh] w-full md:w-full flex flex-col justify-evenly items-center py-10">
+            <section class="map-container w-full md:w-3/4 mt-10 p-4 sm:p-10">
                 <div class="w-full px-4 sm:px-6">
                     <h2 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-8 text-center">Место проведения</h2>
                     <div class="map-wrapper rounded-lg shadow-xl overflow-hidden">
                         <iframe
                             src="https://yandex.ru/map-widget/v1/?um=constructor%3A8ea2fcbb74269d1f21f800f3b1f8089ea64e10eb7c1190b8c776e1ab937e77c1&amp;source=constructor"
                             width="100%"
-                            height="400"
-                            class="w-full h-[300px] sm:h-[500px]">
+                            height="500"
+                            class="w-full h-[400px] sm:h-[600px]">
                         </iframe>
                     </div>
                 </div>
