Refine map section padding for better mobile responsiveness; add new animations for pages 3 and 7 to enhance user experience.

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               </section>
         </div>
 
-        <div id="map" class="page-4 min-h-[50vh] w-full md:w-full flex flex-col justify-evenly items-center py-10">
+        <div id="map" class="page-4 min-h-[50vh] w-full md:w-full flex flex-col justify-evenly items-center md:py-10">
             <section class="map-container w-full md:w-3/4 mt-10 p-4 sm:p-10">
                 <div class="w-full px-4 sm:px-6">
                     <h2 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-8 text-center">Место проведения</h2>
